--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2",
+    "node-fetch": "^3.3.1",
     "nodemailer": "^6.9.1"
   }
 }
